removed duplicate gitignore file. renamed session to entry for every instance relating to surf journal rather than to browser or db session. added rough draft form on entry_add page. cleaned up and commented model.py.

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,15 @@
-# do not commit virtualenv
+# do not push the virtual env
 env/
 
-# ignore old ref stuff
-ref_fromMelonApp
+# API keys
+_noCommit_*
 
-# no pyc
+# exclude all compiled python files
 *.pyc
+
+# exclude databases
+*.db
+
+# ignore specified ref stuff
+ref_fromMelonApp
+spitcast_ref.txt
