combined surf_entries_summary and surf_entries_list functionality, now only using surf_entries_summary template. some cleanup and added noted in placeholder templates. added MSW logo to surf_entries_summary page. additonal commenting in code.

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ _noCommit_*
 # exclude databases
 *.db
 
-# ignore specified ref stuff
+# ignore specified ref stuff and notes to self
 ref_fromMelonApp
 spitcast_ref.txt
+todo_*.txt
