--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,10 @@ MarkupSafe==0.23
 SQLAlchemy==0.9.8
 Werkzeug==0.9.6
 itsdangerous==0.24
-matplotlib==1.4.3
 mock==1.0.1
 nose==1.3.4
 numpy==1.9.2
+psycopg2==2.6
 pyparsing==2.0.3
 python-dateutil==2.4.1
 pytz==2014.10
